more java 11 compliance